--- a/app/src/main/res/layout/fragment_screen1_item.xml
+++ b/app/src/main/res/layout/fragment_screen1_item.xml
@@ -25,7 +25,8 @@
         android:paddingBottom="10dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
-        android:paddingTop="10dp">
+        android:paddingTop="10dp"
+        android:tag="@{userInfo.id}">
 
         <TextView
             android:id="@+id/idTV"
