--- a/app/src/main/res/layout/fragment_screen1_main.xml
+++ b/app/src/main/res/layout/fragment_screen1_main.xml
@@ -14,14 +14,14 @@
         android:layout_marginTop="5dp"
         android:text="@string/userInfo"
         android:textColor="@color/titleMain"
-        android:textSize="24sp" />
+        android:textSize="@dimen/headerTextSize" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/userInfoRV"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="10dp"
-        android:layout_marginStart="10dp">
+        android:layout_marginEnd="@dimen/startEndMargin"
+        android:layout_marginStart="@dimen/startEndMargin">
 
     </android.support.v7.widget.RecyclerView>
 
