--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,5 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="titleMain">#0e0d0d</color>
     <color name="tileItemText">#ffffff</color>
-    <color name="tileItemBackground">#0815d4</color>
+    <color name="tileItemBackground">#2366c4</color>
 </resources>
