--- a/app/src/main/res/layout/fragment_screen1_main.xml
+++ b/app/src/main/res/layout/fragment_screen1_main.xml
@@ -7,6 +7,7 @@
     tools:context="com.sample11.main.ui.MainActivity">
 
     <TextView
+        android:id="@+id/userInfoTitleTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
